--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 { name: 'End', size: 3, color: '#f00', symbol: 3 },
                 { name: 'Torch', size: 3, color: '#ff00ff', symbol: 4 },
                 { name: 'Sconce', size: 3, color: '#00ffff', symbol: 5 },
-                { name: 'Boombug Barrier', size: 3, color: '#ffa500', symbol: 6 },
-                { name: 'Platforming 1', size: 5, color: '#8b4513', symbol: 7 },
-                { name: 'Platforming 2', size: 5, color: '#8b4513', symbol: 8 },
+                { name: 'Ambush', size: 3, color: '#ffa500', symbol: 6 },
+                { name: 'Barrier 1', size: 5, color: '#8b4513', symbol: 7 },
+                { name: 'Barrier 2', size: 5, color: '#8b4513', symbol: 8 },
                 { name: 'Midway Sconce', size: 3, color: '#ff00ff', symbol: 9 },
             ],
             cellColors: {
